[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-imageutil"
description = "high-level image operations, with a bit of magic."
authors = [
    { name = "Fabio Caccamo", email = "fabio.caccamo@gmail.com" },
]
keywords = [
    "python",
    "image",
    "util",
    "utils",
    "utility",
    "utilities",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow >= 9.0.0, < 11.0.0",
    "python-fsutil >= 0.9.0, < 1.0.0",
    "requests >= 2.28.0, < 3.0.0",
]
dynamic = ["version"]
maintainers = [
    { name = "Fabio Caccamo", email = "fabio.caccamo@gmail.com" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.txt"
content-type = "text/plain"

[project.urls]
Homepage = "https://github.com/fabiocaccamo/python-imageutil"
Download = "https://github.com/fabiocaccamo/python-imageutil/releases"
Documentation = "https://github.com/fabiocaccamo/python-imageutil#readme"
Issues = "https://github.com/fabiocaccamo/python-imageutil/issues"
Funding = "https://github.com/sponsors/fabiocaccamo/"
Twitter = "https://twitter.com/fabiocaccamo"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.mypy]
files = ["imageutil"]
ignore_missing_imports = true
strict = true

[tool.ruff]
ignore = []
line-length = 88
select = ["B", "B9", "C", "E", "F", "W"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.setuptools.packages.find]
include = ["imageutil*"]

[tool.setuptools.dynamic.version]
attr = "imageutil.metadata.__version__"
