[metadata]
name = python_imageutil
version = attr: imageutil.metadata.__version__
description = attr: imageutil.metadata.__description__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabiocaccamo/%(name)s
author = attr: imageutil.metadata.__author__
author_email = attr: imageutil.metadata.__email__
maintainer = attr: imageutil.metadata.__author__
maintainer_email = attr: imageutil.metadata.__email__
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Desktop Environment :: File Managers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Filesystems
    Topic :: Utilities
download_url = https://github.com/fabiocaccamo/%(name)s/releases
keywords =
    python
    image
    util
    utils
    utility
    utilities
project_urls =
    Documentation = https://github.com/fabiocaccamo/%(name)s#readme
    Issues = https://github.com/fabiocaccamo/%(name)s/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    Pillow>=9.0.0,<10.0.0
    python-fsutil>=0.9.0,<1.0.0
    requests>=2.28.0,<3.0.0
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    docs*
    images*
    scripts*
    tests*

[flake8]
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9

[mypy]
files = imageutil
ignore_missing_imports = True
strict = True
