[metadata]
name = python-imageutil
version = attr: imageutil.metadata.__version__
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
maintainer = Fabio Caccamo
maintainer_email = fabio.caccamo@gmail.com
description = high-level image operations, with a bit of magic.
keywords =
    python
    image
    util
    utils
    utility
    utilities
url = https://github.com/fabiocaccamo/%(name)s
download_url = https://github.com/fabiocaccamo/%(name)s/releases
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Desktop Environment :: File Managers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Filesystems
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/fabiocaccamo/%(name)s#readme
    Issues = https://github.com/fabiocaccamo/%(name)s/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    Pillow >= 9.0.0, < 10.0.0
    python-fsutil >= 0.9.0, < 1.0.0
    requests >= 2.28.0, < 3.0.0
include_package_data = True

[options.packages.find]
exclude =
    docs*
    images*
    scripts*
    tests*

[mypy]
files = imageutil
ignore_missing_imports = True
strict = True
